<resources>
    <string name="app_name">MathSolved</string>
    <string name="app_name_2">MathSolve &amp; Solve AI</string>

    <string name="file_does_not_exist">File does not exist</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="cannot_set_ringtone">Cannot set ringtone</string>
    <string name="please_grant_system_edit_permission_to_set_alarm">Please grant system edit permission to set alarm</string>
    <string name="unable_to_access_mediastore">Unable to access MediaStore</string>
    <string name="set_as_alarm">Set as alarm</string>
    <string name="cannot_set_as_alarm">Cannot set as alarm</string>
    <string name="error_setting_as_alarm">Error setting as alarm</string>
    <string name="share_audio_via">Share audio via</string>
    #
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="txt_after">After turning it on, click the search button to take screenshots and solve questions whenever needed</string>
    <string name="txt_start"><![CDATA[Start recording/streaming with Math & SolverAI]]></string>
    <string name="txt_during"><![CDATA[During recording or streaming, Math & Solver AI can access all content displayed on your screen or played on your device, including sensitive data like passwords, payment details, photos, messages, and audio.]]></string>
    #
    <string name="title_language">Language</string>
    <string name="txt_language">Language</string>

    #
    <string name="txt_english" translatable="false">English</string>
    <string name="txt_france" translatable="false">French</string>
    <string name="txt_german" translatable="false">German</string>
    <string name="txt_hindi" translatable="false">Hindi</string>
    <string name="txt_spanish" translatable="false">Spanish</string>
    <string name="txt_portugal" translatable="false">Portuguese</string>
    <string name="txt_vietnamese" translatable="false">Vietnamese</string>
    <string name="txt_china" translatable="false">China</string>
    <string name="txt_russia" translatable="false">Russia</string>
    <string name="txt_korea" translatable="false">Korea</string>
    <string name="txt_indo" translatable="false">Indonesia</string>
    <string name="txt_japan" translatable="false">Japan</string>
    <string name="txt_phi" translatable="false">Filippines</string>
    <string name="txt_italy" translatable="false">Italian</string>

    <string name="txt_math"><![CDATA[Math & Solver AI can access all on-screen or played content, including sensitive data like passwords, payments, photos, messages, and audio.]]></string>
    #
    <string name="latest_version">Latest version</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_remove_ads"><p><font color="#251B01">Don\'t let ads bother your experience, buy the VIP package to </font></p><b><font color="#F9E854">Remove ads forever</font></b></string>
    <string name="txt_math_solve_ai_vip"><![CDATA[Math & Solve AI VIP]]></string>
    <string name="pick_image_chooser_title">Chọn nguồn</string>
    <string name="txt_about"><![CDATA[Math&Solver makes learning easier with tools for math solving, subject support, translation, and grammar check — all in one app.]]></string>
    <string name="txt_tools_scan"><![CDATA[Scan & solve]]></string>


    <string name="txt_sub_math">Math</string>
    <string name="txt_sub_physics">Physics</string>
    <string name="txt_sub_chemistry">Chemistry</string>

    <string name="txt_sub_check_grammar">Check grammar</string>
    <string name="txt_sub_translate">Translate</string>
    <string name="share_to">Share to:</string>
    <string name="mes_send_email_using">hi</string>
    <string name="mes_no_email_clients_installed">hi</string>


    <string name="quick_search">Quick search</string>
    <string name="take_the_picture_of_a_math_problem">Take the picture of a math problem</string>
    <string name="take_the_picture_of_a_physics_problem">Take the picture of a physics problem</string>
    <string name="take_the_picture_of_a_chemistry_problem">Take the picture of a chemistry problem</string>

    <string name="picture">Picture</string>
    <string name="math">Math</string>
    <string name="txt_math_problem">Just snap your Math problem</string>
    <string name="txt_and_get_a_step_by_step_solution_quickly">and get a step-by-step solution quickly!</string>
    <string name="txt_discover_smart_answers">Discover smart answers</string>
    <string name="txt_for_all_subjects_from_science_to_history_and_more">for all subjects - from Science to History and more!</string>
    <string name="txt_you_smart_study_assistant">You smart study assistant</string>
    <string name="txt_here_to_support_you_anytime_anywhere">here to support you anytime, anywhere!</string>
    <string name="txt_guest">Guest</string>
    <string name="txt_middle_school">Middle school</string>
    <string name="txt_log_in_sign_up">Log in/Sign up</string>
    <string name="txt_upgrade_to_exceed_95_accuracy">Upgrade to exceed 95% accuracy</string>
    <string name="txt_upgrade">Upgrade</string>
    <string name="txt_favourite">Favourite</string>
    <string name="txt_clear_history">Clear history</string>
    <string name="txt_rate_app">Rate app</string>
    <string name="txt_share_app">Share app</string>
    <string name="txt_privacy">Privacy</string>
    <string name="txt_more_app">More app</string>
    <string name="txt_version">Version</string>
    <string name="txt_advisor_ai">Advisor AI</string>
    <string name="txt_write_your_message_here">Write your message here</string>
    <string name="txt_delete_all">Delete All</string>
    <string name="txt_log_in_for_full_access">Log in for full access</string>
    <string name="txt_delete_account_anytime">Delete account anytime</string>
    <string name="txt_continue_with_google">Continue with Google</string>
    <string name="txt_continue_with_email">Continue with Email</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_translate_to">Translate to</string>
    <string name="txt_ai_support_anytime">AI support anytime</string>
    <string name="txt_other_answer">Other answer</string>
    <string name="txt_loading">Loading...</string>
    <string name="txt_next">Next</string>
    <string name="txt_ai_assistant">AI Assistant</string>
    <string name="dialog_remove_title">Remove from Favorites</string>
    <string name="dialog_remove_message">Are you sure you want to remove this answer from your favorites list?</string>
    <string name="dialog_delete">Delete</string>
    <!-- Clear All Dialog strings -->
    <string name="dialog_clear_all_title">Clear All Favorites</string>
    <string name="dialog_clear_all_message">Are you sure you want to remove all favorite answers?</string>
    <string name="dialog_clear_all_warning">This action cannot be undone!</string>
    <string name="dialog_clear_all">Clear All</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Toast messages -->
    <string name="toast_all_cleared">All favorites cleared</string>
    <string name="toast_removed_from_favourite">Removed from favorites</string>
    <string name="toast_copied">Copied</string>
</resources>